// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Component/Button Button Add 1`] = `
<button
  className="Button-pzvjfl-0 dmLhUt"
>
  Hinzufügen
</button>
`;

exports[`Storyshots Component/Button Button Order 1`] = `
<button
  className="Button-pzvjfl-0 dmLhUt"
>
  Bestellen
</button>
`;

exports[`Storyshots Component/Searchbar Search 1`] = `
<input
  className="Searchbar-sc-1bd71k1-0 klVVlE"
  placeholder="Suche"
/>
`;

exports[`Storyshots Pages/CategoriesPage Standard 1`] = `
Array [
  <h1>
    Home
  </h1>,
  <div
    className="NavbarBottom__Container-sc-17hvsnk-0 guYphZ"
  >
    <a
      className="NavbarBottom__NavLink-sc-17hvsnk-1 klXJLp"
      href="/"
      onClick={[Function]}
    >
      Home
    </a>
    <a
      className="NavbarBottom__NavLink-sc-17hvsnk-1 btIWbG"
      href="/product-overview"
      onClick={[Function]}
    >
      Suche
    </a>
    <a
      className="NavbarBottom__NavLink-sc-17hvsnk-1 btIWbG"
      href="/checkout"
      onClick={[Function]}
    >
      Warenkorb
    </a>
    <a
      className="NavbarBottom__NavLink-sc-17hvsnk-1 btIWbG"
      href="/profile"
      onClick={[Function]}
    >
      Profil
    </a>
  </div>,
]
`;

exports[`Storyshots Pages/CheckoutPage Standard 1`] = `
Array [
  <h1>
    Checkout
  </h1>,
  <div
    className="NavbarBottom__Container-sc-17hvsnk-0 guYphZ"
  >
    <a
      className="NavbarBottom__NavLink-sc-17hvsnk-1 klXJLp"
      href="/"
      onClick={[Function]}
    >
      Home
    </a>
    <a
      className="NavbarBottom__NavLink-sc-17hvsnk-1 btIWbG"
      href="/product-overview"
      onClick={[Function]}
    >
      Suche
    </a>
    <a
      className="NavbarBottom__NavLink-sc-17hvsnk-1 btIWbG"
      href="/checkout"
      onClick={[Function]}
    >
      Warenkorb
    </a>
    <a
      className="NavbarBottom__NavLink-sc-17hvsnk-1 btIWbG"
      href="/profile"
      onClick={[Function]}
    >
      Profil
    </a>
  </div>,
]
`;

exports[`Storyshots Pages/CustomersOverviewPage Standard 1`] = `
Array [
  <h1>
    Customers Overview
  </h1>,
  <div
    className="NavbarBottom__Container-sc-17hvsnk-0 guYphZ"
  >
    <a
      className="NavbarBottom__NavLink-sc-17hvsnk-1 klXJLp"
      href="/"
      onClick={[Function]}
    >
      Home
    </a>
    <a
      className="NavbarBottom__NavLink-sc-17hvsnk-1 btIWbG"
      href="/product-overview"
      onClick={[Function]}
    >
      Suche
    </a>
    <a
      className="NavbarBottom__NavLink-sc-17hvsnk-1 btIWbG"
      href="/checkout"
      onClick={[Function]}
    >
      Warenkorb
    </a>
    <a
      className="NavbarBottom__NavLink-sc-17hvsnk-1 btIWbG"
      href="/profile"
      onClick={[Function]}
    >
      Profil
    </a>
  </div>,
]
`;

exports[`Storyshots Pages/LoadingPage Standard 1`] = `
Array [
  <h1>
    Loading
  </h1>,
  <div
    className="NavbarBottom__Container-sc-17hvsnk-0 guYphZ"
  >
    <a
      className="NavbarBottom__NavLink-sc-17hvsnk-1 klXJLp"
      href="/"
      onClick={[Function]}
    >
      Home
    </a>
    <a
      className="NavbarBottom__NavLink-sc-17hvsnk-1 btIWbG"
      href="/product-overview"
      onClick={[Function]}
    >
      Suche
    </a>
    <a
      className="NavbarBottom__NavLink-sc-17hvsnk-1 btIWbG"
      href="/checkout"
      onClick={[Function]}
    >
      Warenkorb
    </a>
    <a
      className="NavbarBottom__NavLink-sc-17hvsnk-1 btIWbG"
      href="/profile"
      onClick={[Function]}
    >
      Profil
    </a>
  </div>,
]
`;

exports[`Storyshots Pages/OrderConfirmationPage Standard 1`] = `
Array [
  <h1>
    Order Confirmation
  </h1>,
  <div
    className="NavbarBottom__Container-sc-17hvsnk-0 guYphZ"
  >
    <a
      className="NavbarBottom__NavLink-sc-17hvsnk-1 klXJLp"
      href="/"
      onClick={[Function]}
    >
      Home
    </a>
    <a
      className="NavbarBottom__NavLink-sc-17hvsnk-1 btIWbG"
      href="/product-overview"
      onClick={[Function]}
    >
      Suche
    </a>
    <a
      className="NavbarBottom__NavLink-sc-17hvsnk-1 btIWbG"
      href="/checkout"
      onClick={[Function]}
    >
      Warenkorb
    </a>
    <a
      className="NavbarBottom__NavLink-sc-17hvsnk-1 btIWbG"
      href="/profile"
      onClick={[Function]}
    >
      Profil
    </a>
  </div>,
]
`;

exports[`Storyshots Pages/ProductPage Standard 1`] = `
Array [
  <h1>
    Product Page
  </h1>,
  <div
    className="NavbarBottom__Container-sc-17hvsnk-0 guYphZ"
  >
    <a
      className="NavbarBottom__NavLink-sc-17hvsnk-1 klXJLp"
      href="/"
      onClick={[Function]}
    >
      Home
    </a>
    <a
      className="NavbarBottom__NavLink-sc-17hvsnk-1 btIWbG"
      href="/product-overview"
      onClick={[Function]}
    >
      Suche
    </a>
    <a
      className="NavbarBottom__NavLink-sc-17hvsnk-1 btIWbG"
      href="/checkout"
      onClick={[Function]}
    >
      Warenkorb
    </a>
    <a
      className="NavbarBottom__NavLink-sc-17hvsnk-1 btIWbG"
      href="/profile"
      onClick={[Function]}
    >
      Profil
    </a>
  </div>,
]
`;

exports[`Storyshots Pages/ProductsOverviewPage Standard 1`] = `
Array [
  <h1>
    Products Overview
  </h1>,
  <div
    className="NavbarBottom__Container-sc-17hvsnk-0 guYphZ"
  >
    <a
      className="NavbarBottom__NavLink-sc-17hvsnk-1 klXJLp"
      href="/"
      onClick={[Function]}
    >
      Home
    </a>
    <a
      className="NavbarBottom__NavLink-sc-17hvsnk-1 btIWbG"
      href="/product-overview"
      onClick={[Function]}
    >
      Suche
    </a>
    <a
      className="NavbarBottom__NavLink-sc-17hvsnk-1 btIWbG"
      href="/checkout"
      onClick={[Function]}
    >
      Warenkorb
    </a>
    <a
      className="NavbarBottom__NavLink-sc-17hvsnk-1 btIWbG"
      href="/profile"
      onClick={[Function]}
    >
      Profil
    </a>
  </div>,
]
`;

exports[`Storyshots Pages/ProfilePage Standard 1`] = `
Array [
  <h1>
    Profile
  </h1>,
  <div
    className="NavbarBottom__Container-sc-17hvsnk-0 guYphZ"
  >
    <a
      className="NavbarBottom__NavLink-sc-17hvsnk-1 klXJLp"
      href="/"
      onClick={[Function]}
    >
      Home
    </a>
    <a
      className="NavbarBottom__NavLink-sc-17hvsnk-1 btIWbG"
      href="/product-overview"
      onClick={[Function]}
    >
      Suche
    </a>
    <a
      className="NavbarBottom__NavLink-sc-17hvsnk-1 btIWbG"
      href="/checkout"
      onClick={[Function]}
    >
      Warenkorb
    </a>
    <a
      className="NavbarBottom__NavLink-sc-17hvsnk-1 btIWbG"
      href="/profile"
      onClick={[Function]}
    >
      Profil
    </a>
  </div>,
]
`;
